Got rid of warnings with Java 10